*** added Delete and Update Employee, Client, Position, Departament to Database

--- a/CRM/MainForm.xaml
+++ b/CRM/MainForm.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="CRM system" Height="676" Width="936" WindowStartupLocation="CenterScreen">
     <Window.Resources>
+
         <!--<BitmapImage x:Key="ImageSource1" CreateOptions="IgnoreImageCache" CacheOption="OnLoad" UriSource="I:\CRMGroupProject\CRM\Pictures\contact3.png"/>
         <BitmapImage x:Key="ImageSource2" CreateOptions="IgnoreImageCache" CacheOption="OnLoad" UriSource="I:\CRMGroupProject\CRM\Pictures\contact3.png"/>
         <BitmapImage x:Key="ImageSource3" CreateOptions="IgnoreImageCache" CacheOption="OnLoad" UriSource="I:\CRMGroupProject\CRM\Pictures\employees.png"/>
@@ -192,11 +193,14 @@
                                         <TextBox x:Name="tbEmail" HorizontalAlignment="Left" Height="23" Margin="16,298,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="281" IsReadOnly="True"/>
                                         <TextBox x:Name="tbWeb" HorizontalAlignment="Left" Height="23" Margin="322,298,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="232" IsReadOnly="True"/>
                                         <TextBox x:Name="tbDescription" HorizontalAlignment="Left" Height="55" Margin="16,371,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="538" IsReadOnly="True"/>
-                                        <!--<RadioButton x:Name="rbYesCommercial" GroupName="commercial" Content="YES" Checked="RadioButton_Checked" HorizontalAlignment="Left" Margin="112,448,0,0" VerticalAlignment="Top"/>
-                    <RadioButton x:Name="rbNoCommercial" GroupName="commercial" Content="NO" Checked="RadioButton_Checked" HorizontalAlignment="Left" Margin="163,448,0,0" VerticalAlignment="Top"/>-->
-                                        <DatePicker x:Name="dpFirstContact" HorizontalAlignment="Left" Margin="413,443,0,0" VerticalAlignment="Top" Width="141" Visibility="Hidden" />
-                                        <TextBox x:Name="tbFirstContact" HorizontalAlignment="Left" Height="23" Margin="413,446,0,-1" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" IsReadOnly="True" IsInactiveSelectionHighlightEnabled="True"/>
-                                        <TextBox x:Name="tbCommercial" HorizontalAlignment="Left" Height="23" Margin="109,446,0,-1" TextWrapping="Wrap" VerticalAlignment="Top" Width="67" IsReadOnly="True" IsInactiveSelectionHighlightEnabled="True"/>
+                                        <RadioButton x:Name="rbYesCommercial" GroupName="commercial" Content="YES" Checked="RadioButton_Checked" HorizontalAlignment="Left" Margin="112,448,0,0" VerticalAlignment="Top" IsEnabled="False"/>
+                                        <RadioButton x:Name="rbNoCommercial" GroupName="commercial" Content="NO" Checked="RadioButton_Checked" HorizontalAlignment="Left" Margin="163,448,0,0" VerticalAlignment="Top" IsEnabled="False"/>
+                                        <DatePicker x:Name="dpFirstContact" HorizontalAlignment="Left" Margin="413,443,0,0" VerticalAlignment="Top" Width="141" IsEnabled="False" />
+                                        <Button x:Name="btClientUpdate" Content="UPDATE" Height="35" VerticalAlignment="Top" Margin="16,483,0,-33" HorizontalAlignment="Left" Width="160" Click="btClientUpdate_Click" Foreground="#FF102EB4"/>
+                                        <Button x:Name="btClientClear" Content="CLEAR" Height="35" VerticalAlignment="Top" Margin="205,483,189,-33" Width="160"  Click="btClientClear_Click" Foreground="#FF9C1313"/>
+                                        <Button x:Name="btClientDelete" Content="DELETE" Height="35" VerticalAlignment="Top" Margin="394,483,0,-33" Width="160"  Click="btClientDelete_Click" Foreground="#FF9C1313"/>
+                                        <!--<TextBox x:Name="tbFirstContact" HorizontalAlignment="Left" Height="23" Margin="413,446,0,-1" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" IsReadOnly="True" IsInactiveSelectionHighlightEnabled="True"/>
+                                        <TextBox x:Name="tbCommercial" HorizontalAlignment="Left" Height="23" Margin="109,446,0,-1" TextWrapping="Wrap" VerticalAlignment="Top" Width="67" IsReadOnly="True" IsInactiveSelectionHighlightEnabled="True"/>-->
                                         <!--SelectedDateChanged="DatePicker_SelectedDateChanged"-->
                                         <!--<Button x:Name="btAdd" Content="ADD" HorizontalAlignment="Left" Margin="16,486,0,0" VerticalAlignment="Top" Width="160" Foreground="#FF055905" Click="btAdd_Click" Height="39"/>
                     <Button x:Name="btClear" Content="CLEAR" HorizontalAlignment="Left" Margin="206,486,0,0" VerticalAlignment="Top" Width="160" Foreground="#FFC11919" Click="btClear_Click" Height="39"/>
@@ -236,28 +240,29 @@
                                     <RowDefinition></RowDefinition>
                                 </Grid.RowDefinitions>
                                 <Grid.ColumnDefinitions>
-                                    <ColumnDefinition Width="185" MinWidth="130" MaxWidth="185"></ColumnDefinition>
+                                    <ColumnDefinition Width="180" MinWidth="180" MaxWidth="280"></ColumnDefinition>
                                     <ColumnDefinition Width="10"></ColumnDefinition>
                                     <ColumnDefinition></ColumnDefinition>
                                 </Grid.ColumnDefinitions>
                                 <WrapPanel Grid.Row="1" MinWidth="180">
-                                    <DataGrid x:Name="dgEmployeesList" Margin="3,3,3,3" SelectionChanged="dgEmployeesList_SelectionChanged" RenderTransformOrigin="0.5,0.5" AutoGenerateColumns="False" SelectionMode="Single" HorizontalAlignment="Left" Width="180" Height="541" VerticalAlignment="Top">
+                                    <DataGrid x:Name="dgEmployeesList" Margin="3,3,3,3" SelectionChanged="dgEmployeesList_SelectionChanged" RenderTransformOrigin="0.5,0.5" AutoGenerateColumns="False" SelectionMode="Single" HorizontalAlignment="Left" Width="270" Height="541" VerticalAlignment="Top" BorderThickness="0">
                                         <DataGrid.Columns>
-                                            <DataGridTextColumn Header="First Name" Binding="{Binding FirstName}" Width="100" IsReadOnly="true" />
-                                            <DataGridTextColumn Header="Last Name" Binding="{Binding LastName}" Width="100" IsReadOnly="true" />
+                                            <DataGridTextColumn Header="First Name" Binding="{Binding LastName}" Width="165" IsReadOnly="true" />
+                                            <DataGridTextColumn Header="Last Name" Binding="{Binding FirstName}" Width="95" IsReadOnly="true" />
                                         </DataGrid.Columns>
                                         <DataGrid.ColumnHeaderStyle>
                                             <Style TargetType="{x:Type DataGridColumnHeader}">
                                                 <Setter Property="FontWeight" Value="Bold" />
                                                 <Setter Property="Background" Value="LightGray" />
-                                                <Setter Property="BorderThickness" Value="1" />
-                                                <Setter Property="BorderBrush" Value="Black" />
+                                                <!--<Setter Property="BorderThickness" Value="1" />
+                                                <Setter Property="BorderBrush" Value="Black" />-->
                                                 <Setter Property="Height" Value="25" />
                                                 <Setter Property="HorizontalContentAlignment" Value="Center" />
                                             </Style>
                                         </DataGrid.ColumnHeaderStyle>
-                                    </DataGrid>
 
+
+                                    </DataGrid>
                                 </WrapPanel>
                                 <WrapPanel Grid.Row="1" Grid.Column="3" MinWidth="200">
                                     <Grid Margin="0,0,-6,0">
@@ -288,11 +293,13 @@
                                         <TextBox x:Name="tbEmployeePosition" HorizontalAlignment="Left" Height="23" Margin="16,315,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="281" IsReadOnly="True"/>
                                         <TextBox x:Name="tbEmployeeDepartament" HorizontalAlignment="Left" Height="23" Margin="322,315,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="232" IsReadOnly="True"/>
                                         <TextBox x:Name="tbEmployeeDescription" HorizontalAlignment="Left" Height="55" Margin="16,371,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="538" IsReadOnly="True"/>
-                                        <!--<RadioButton x:Name="rbYesCommercial" GroupName="commercial" Content="YES" Checked="RadioButton_Checked" HorizontalAlignment="Left" Margin="112,448,0,0" VerticalAlignment="Top"/>
-                    <RadioButton x:Name="rbNoCommercial" GroupName="commercial" Content="NO" Checked="RadioButton_Checked" HorizontalAlignment="Left" Margin="163,448,0,0" VerticalAlignment="Top"/>-->
-                                        <DatePicker x:Name="dpEmployeeFirstContact" HorizontalAlignment="Left" Margin="413,443,0,0" VerticalAlignment="Top" Width="141" Visibility="Hidden" />
-                                        <TextBox x:Name="tbEmployeeHireDate" HorizontalAlignment="Left" Height="23" Margin="414,445,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="140" IsReadOnly="True" IsInactiveSelectionHighlightEnabled="True"/>
-                                        <TextBox x:Name="tbEmployeeDOB" HorizontalAlignment="Left" Height="23" Margin="109,445,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="140" IsReadOnly="True" IsInactiveSelectionHighlightEnabled="True"/>
+                                        <DatePicker x:Name="dpEmployeeHireDate" HorizontalAlignment="Left" Margin="413,443,0,0" VerticalAlignment="Top" Width="141" IsEnabled="False" />
+                                        <DatePicker x:Name="dpEmployeeDOB" HorizontalAlignment="Left" Margin="109,445,0,-1" VerticalAlignment="Top" Width="141" IsEnabled="False" />
+                                        <Button x:Name="btEmployeeUpdate" Content="UPDATE" Height="35" VerticalAlignment="Top" Margin="16,483,0,-33" HorizontalAlignment="Left" Width="160" Click="btEmployeeUpdate_Click" Foreground="#FF102EB4"/>
+                                        <Button x:Name="btEmployeeClear" Content="CLEAR" Height="35" VerticalAlignment="Top" Margin="205,483,189,-33" Width="160"  Click="btEmployeeClear_Click" Foreground="#FF9C1313"/>
+                                        <Button x:Name="btEmployeeDelete" Content="DELETE" Height="35" VerticalAlignment="Top" Margin="394,483,0,-33" Width="160"  Click="btEmployeeDelete_Click" Foreground="#FF9C1313"/>
+                                        <!--<TextBox x:Name="tbEmployeeHireDate" HorizontalAlignment="Left" Height="23" Margin="414,445,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="140" IsReadOnly="True" IsInactiveSelectionHighlightEnabled="True"/>
+                                        <TextBox x:Name="tbEmployeeDOB" HorizontalAlignment="Left" Height="23" Margin="109,445,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="140" IsReadOnly="True" IsInactiveSelectionHighlightEnabled="True"/>-->
                                         <!--SelectedDateChanged="DatePicker_SelectedDateChanged"-->
                                         <!--<Button x:Name="btAdd" Content="ADD" HorizontalAlignment="Left" Margin="16,486,0,0" VerticalAlignment="Top" Width="160" Foreground="#FF055905" Click="btAdd_Click" Height="39"/>
                     <Button x:Name="btClear" Content="CLEAR" HorizontalAlignment="Left" Margin="206,486,0,0" VerticalAlignment="Top" Width="160" Foreground="#FFC11919" Click="btClear_Click" Height="39"/>
@@ -331,5 +338,6 @@
                 </TabControl>
             </Grid>
         </Border>
+
     </DockPanel>
 </Window>
