* finished NewTask with add/clear and validation

--- a/CRM/NewTask.xaml
+++ b/CRM/NewTask.xaml
@@ -8,22 +8,22 @@
         Title="NewTask" Height="380" Width="800" WindowStartupLocation="CenterOwner" ScrollViewer.VerticalScrollBarVisibility="Disabled" ResizeMode="NoResize">
     <Grid>
         <Label Content="NEW   TASK" HorizontalAlignment="Left" Margin="348,2,0,0" VerticalAlignment="Top" FontSize="16" Foreground="#FF0E52A2"/>
-        <Label Content="Client" HorizontalAlignment="Left" Margin="39,28,0,0" VerticalAlignment="Top" Width="120"/>
+        <Label Content="Client" HorizontalAlignment="Left" Margin="39,28,0,0" VerticalAlignment="Top" Width="42"/>
         <ComboBox x:Name="cbClientList" IsEditable="True" StaysOpenOnEdit="True"  HorizontalAlignment="Left" Margin="39,59,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="cbClientList_SelectionChanged" >
          
         </ComboBox>
-        <Label Content="Task name" HorizontalAlignment="Left" Margin="39,92,0,0" VerticalAlignment="Top" Width="120"/>
+        <Label Content="Task name" HorizontalAlignment="Left" Margin="39,92,0,0" VerticalAlignment="Top" Width="68"/>
         <TextBox x:Name="tbTaskName" HorizontalAlignment="Left" Height="23" Margin="39,123,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="157"/>
-        <Label Content="Start Time" HorizontalAlignment="Left" Margin="39,151,0,0" VerticalAlignment="Top" Width="120"/>
+        <Label Content="Start Time" HorizontalAlignment="Left" Margin="39,151,0,0" VerticalAlignment="Top" Width="64"/>
         <DatePicker x:Name="dpStartDate"  SelectedDateFormat="Short" HorizontalAlignment="Left" Margin="39,177,0,0" VerticalAlignment="Top"/>
         <DatePicker x:Name="dpEndDate" SelectedDateFormat="Short" HorizontalAlignment="Left" Margin="39,235,0,0" VerticalAlignment="Top"/>
-        <Button x:Name="btSave" Content="Save" HorizontalAlignment="Left" Margin="48,296,0,0" VerticalAlignment="Top" Width="75" Height="32" Click="btSave_Click"/>
-        <Label Content="Ends" HorizontalAlignment="Left" Margin="39,205,0,0" VerticalAlignment="Top" Width="120"/>
-        <Label Content="Employee" HorizontalAlignment="Left" Margin="278,28,0,0" VerticalAlignment="Top" Width="120"/>
+        <Button x:Name="btSave" Content="ADD" HorizontalAlignment="Left" Margin="48,296,0,0" VerticalAlignment="Top" Width="75" Foreground="#FF055905" Height="32" Click="btSave_Click"/>
+        <Label Content="Ends" HorizontalAlignment="Left" Margin="39,205,0,0" VerticalAlignment="Top" Width="42"/>
+        <Label Content="Employee" HorizontalAlignment="Left" Margin="278,28,0,0" VerticalAlignment="Top" Width="65"/>
         <ComboBox x:Name="cbEmployeeList" IsEditable="True" StaysOpenOnEdit="True"  HorizontalAlignment="Left" Margin="278,60,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="cbEmployeeList_SelectionChanged"/>
            
        
-        <Label Content="Task Type" HorizontalAlignment="Left" Margin="278,100,0,0" VerticalAlignment="Top" Width="120"/>
+        <Label Content="Task Type" HorizontalAlignment="Left" Margin="278,100,0,0" VerticalAlignment="Top" Width="65"/>
         <ComboBox x:Name="cbTaskType" HorizontalAlignment="Left" Margin="278,132,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="cbTaskType_SelectionChanged">
             <ComboBoxItem IsSelected="True">--Select option--</ComboBoxItem>
             <ComboBoxItem>Meeting</ComboBoxItem>
@@ -32,7 +32,7 @@
             <ComboBoxItem>Event</ComboBoxItem>
             <ComboBoxItem>Note</ComboBoxItem>
         </ComboBox>
-        <Label Content="Status" HorizontalAlignment="Left" Margin="278,159,0,0" VerticalAlignment="Top" Width="120"/>
+        <Label Content="Status" HorizontalAlignment="Left" Margin="278,159,0,0" VerticalAlignment="Top" Width="48"/>
         <ComboBox x:Name="cbStatus" HorizontalAlignment="Left" Margin="278,191,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="cbStatus_SelectionChanged">
             <ComboBoxItem IsSelected="True">--Select option--</ComboBoxItem>
             <ComboBoxItem>Active</ComboBoxItem>
@@ -41,7 +41,7 @@
             <ComboBoxItem>Done</ComboBoxItem>
 
         </ComboBox>
-        <Label Content="Priority" HorizontalAlignment="Left" Margin="278,228,0,0" VerticalAlignment="Top" Width="120"/>
+        <Label Content="Priority" HorizontalAlignment="Left" Margin="278,228,0,0" VerticalAlignment="Top" Width="48"/>
         <ComboBox x:Name="cbPriority" HorizontalAlignment="Left" Margin="278,260,0,0" VerticalAlignment="Top" Width="120" SelectionChanged="cbPriority_SelectionChanged">
             <ComboBoxItem IsSelected="True">--Select option--</ComboBoxItem>
             <ComboBoxItem>Low</ComboBoxItem>
@@ -56,9 +56,17 @@
             <ComboBoxItem>Message</ComboBoxItem>
         </ComboBox>
 
-        <Label Content="Description" HorizontalAlignment="Left" Margin="482,105,0,0" VerticalAlignment="Top" Width="120"/>
+        <Label Content="Description" HorizontalAlignment="Left" Margin="482,105,0,0" VerticalAlignment="Top" Width="70"/>
         <TextBox x:Name="tbDescription" HorizontalAlignment="Left" Height="147" Margin="482,135,0,0" TextWrapping="Wrap" Text="" VerticalAlignment="Top" Width="277"/>
-        <Button x:Name="btClear" Content="Clear" HorizontalAlignment="Left" Margin="155,296,0,0" VerticalAlignment="Top" Width="75" RenderTransformOrigin="0.653,0.455" Height="32"/>
-
+        <Button x:Name="btClear" Content="CLEAR" HorizontalAlignment="Left" Margin="155,296,0,0" VerticalAlignment="Top" Width="75" Foreground="#FFC11919" RenderTransformOrigin="0.653,0.455" Height="32" Click="btClear_Click"/>
+        <Label x:Name="label" Content="*" HorizontalAlignment="Left" Margin="86,28,0,0" VerticalAlignment="Top" Foreground="#FFD40C0C" FontSize="16"/>
+        <Label x:Name="label_Copy" Content="*" HorizontalAlignment="Left" Margin="107,92,0,0" VerticalAlignment="Top" Foreground="#FFD40C0C" FontSize="16" RenderTransformOrigin="1.423,2.518"/>
+        <Label x:Name="label_Copy1" Content="*" HorizontalAlignment="Left" Margin="343,28,0,0" VerticalAlignment="Top" Foreground="#FFD40C0C" FontSize="16" RenderTransformOrigin="1.423,2.518"/>
+        <Label x:Name="label_Copy2" Content="*" HorizontalAlignment="Left" Margin="343,100,0,0" VerticalAlignment="Top" Foreground="#FFD40C0C" FontSize="16" RenderTransformOrigin="1.423,2.518"/>
+        <Label x:Name="label_Copy3" Content="*" HorizontalAlignment="Left" Margin="326,159,0,0" VerticalAlignment="Top" Foreground="#FFD40C0C" FontSize="16" RenderTransformOrigin="1.423,2.518"/>
+        <Label x:Name="label_Copy4" Content="*" HorizontalAlignment="Left" Margin="331,228,0,0" VerticalAlignment="Top" Foreground="#FFD40C0C" FontSize="16" RenderTransformOrigin="1.423,2.518"/>
+        <Label x:Name="label_Copy5" Content="*" HorizontalAlignment="Left" Margin="557,105,0,0" VerticalAlignment="Top" Foreground="#FFD40C0C" FontSize="16" RenderTransformOrigin="1.423,2.518"/>
+        <Label x:Name="label_Copy6" Content="*" HorizontalAlignment="Left" Margin="108,151,0,0" VerticalAlignment="Top" Foreground="#FFD40C0C" FontSize="16" RenderTransformOrigin="1.423,2.518"/>
+        <Label x:Name="label_Copy7" Content="*" HorizontalAlignment="Left" Margin="86,205,0,0" VerticalAlignment="Top" Foreground="#FFD40C0C" FontSize="16" RenderTransformOrigin="1.423,2.518"/>
     </Grid>
 </Window>
